# MicMuter

./: CMakeLists.txt  CMakePresets.json  README.md
resources/: resources.rc
src/: functions.c  functions.h  main.c
